# my_dev_joureny

./: basic_1.ipynb  eval_fundamentals.ipynb  hugging_face.ipynb  main.py  pyproject.toml
