[project]
name = "ml-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "transformers>=5.12.1",
]
